--- a/public/index-dev.html
+++ b/public/index-dev.html
@@ -1,5 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+        <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/bootstrap-theme.css" rel="stylesheet">
         <script src="lib/require.js" data-main="require.config.dev.js"></script>
     </head>
     <body>
