--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <link href="css/bootstrap-theme.min.css" rel="stylesheet">
         <script src="lib/require.js" data-main="require.config.js"></script>
     </head>
-    <body ng-app="exampleApplication" ng-view="" ng-controller="ExampleController">
+    <body ng-app="exampleApplication" ng-view="">
 
         <div class="container-fluid">
             <div class="row">
@@ -20,7 +20,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <example account='account'/>
+                    <example />
                 </div>
                 <div class="col-md-6">
 
