--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,16 @@
         <link href="css/bootstrap-theme.min.css" rel="stylesheet">
         <script src="lib/require.js" data-main="require.config.js"></script>
     </head>
-    <body ng-app="exampleApplication" ng-view="">
+    <body ng-app="exampleApplication">
 
-        <div class="container-fluid">
+        <div class="container-fluid" ng-controller="exampleCtrl">
+            <form ng-submit="searchAccount()">
+                <input type="text" ng-model="accountNumber" />
+                <input type="submit" value="search" />
+            </form>
             <div class="row">
                 <div class="col-md-9">
-                    <customer />
+                    <customer account-number="selectedAccountNumber"/>
                 </div>
                 <div class="col-md-3">
 
@@ -20,7 +24,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <example />
+                    <example account-number="selectedAccountNumber"/>
                 </div>
                 <div class="col-md-6">
 
